--- a/index.html
+++ b/index.html
@@ -603,13 +603,13 @@ At Build Easy IT Solutions, we are dedicated to revolutionizing the way business
                 <a href="">
                   <i class="fa fa-map-marker" aria-hidden="true"></i>
                   <span>
-                    Khammam, Telangan, India - 5007001
+                    Khammam, Telangan, India - 507001
                   </span>
                 </a>
                 <a href="">
                   <i class="fa fa-phone" aria-hidden="true"></i>
                   <span>
-                    Call +91 9959632837
+                    WhatsApp +91 9959632837
                   </span>
                 </a>
                 <a href="">
